Subo practica code review